fix: the button was shrinking when viewport widths were too small

--- a/IpAddrTracker/app/scss/_modules.scss
+++ b/IpAddrTracker/app/scss/_modules.scss
@@ -33,12 +33,14 @@
     border-radius: rem(15px);
     box-shadow: 0px rem(50px) rem(50px) rem(-25px) rgba(0, 0, 0, 0.0983665);
     width: 100%;
+    display: flex;
   }
 
   &__search {
     font-size: rem(18px);
     line-height: calc(21 / 18);
     border: none;
+    width: 100%;
 
     &::-webkit-input-placeholder {
       color: $darkGray;
@@ -136,6 +138,7 @@
   max-width: rem(550px);
   overflow: hidden;
   width: 100%;
+  border-radius: rem(15px);
 }
 
 .semi-transparent {
